<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEE58"
    tools:context="com.example.android.halalguysquiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/welcome_halal"
            android:textSize="18sp" />

        <TextView
            style="@style/HeaderStyle"
            android:text="@string/question1" />


        <TextView
            style="@style/QuestionStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question1Text" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_new_york_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Your City" />

            <RadioButton
                android:id="@+id/radio_los_angeles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Los Angeles" />

        </RadioGroup>

        <TextView
            style="@style/HeaderStyle"
            android:text="@string/question2" />

        <TextView
            style="@style/QuestionStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question2Text" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp">

            <RadioButton
                android:id="@+id/radio_food_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_cart" />

            <RadioButton
                android:id="@+id/radio_store_front"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/store_front" />

        </RadioGroup>

        <TextView
            style="@style/HeaderStyle"
            android:text="@string/question3" />


        <TextView
            style="@style/QuestionStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question3Text" />

        <CheckBox
            android:id="@+id/check_chicken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/chicken" />

        <CheckBox
            android:id="@+id/check_pork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/pork" />

        <CheckBox
            android:id="@+id/check_gyro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/gyro" />

        <TextView
            style="@style/HeaderStyle"
            android:text="@string/question4" />

        <TextView
            style="@style/QuestionStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question4Text" />

        <EditText
            android:id="@+id/edit_bread"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:hint="@string/bread" />

        <TextView
            style="@style/HeaderStyle"
            android:text="@string/question5" />

        <TextView
            style="@style/QuestionStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question5Text" />

        <CheckBox
            android:id="@+id/check_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/red" />

        <CheckBox
            android:id="@+id/check_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/white" />

        <CheckBox
            android:id="@+id/check_yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/yelllow" />

        <TextView
            style="@style/HeaderStyle"
            android:text="@string/question6" />

        <TextView
            style="@style/QuestionStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question6Text" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp">

            <RadioButton
                android:id="@+id/radio_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/small" />

            <RadioButton
                android:id="@+id/radio_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regular" />

            <RadioButton
                android:id="@+id/radio_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/large" />

        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:onClick="finishQuiz"
            android:text="@string/finish" />


    </LinearLayout>

</ScrollView>
